# netwarden

./: .gitattributes  .gitignore  LICENSE  README.md  Taskfile.yml  config-requirements.md  vetur.config.js
.github/workflows/: ci.yml
backend/: Dockerfile  Taskfile.yml  pyproject.toml  requirements.txt  sandbox.py  settings.toml  setup.cfg
backend/netwarden/: app.py  config.py  constants.py  netbox.py  settings.py  utils.py
backend/netwarden/connections/: __init__.py  base.py  handlers.py
backend/netwarden/connections/netconf/: connection.py
backend/netwarden/connections/restconf/: __init__.py  connection.py
backend/netwarden/connections/restconf/openconfig/: __init__.py  cfg.py  lldp_neighbors.py  parse_lldp.py
backend/netwarden/connections/ssh/: __init__.py  connection.py  constants.py
backend/netwarden/inventory/: __init__.py  device.py  inventory.py
backend/netwarden/models/: graph.py  interface.py  link.py  node.py
backend/netwarden/routers/: devices.py
backend/tests/: test_utils.py
backend/tests/routers/: test_devices.py
backend/tests/routers/scrapli_replay_sessions/: test_get_devices.yaml
frontend/: .eslintrc.js  Taskfile.yml  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: HelloWorld.vue  Inventory.vue  NetworkDiagram.vue
frontend/src/router/: index.js
frontend/src/views/: Home.vue  InventoryView.vue  NetworkDiagramView.vue
