[tool.poetry]
name = "netwarden"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = "*"
httpx = "*"
dynaconf = "^2"
lxml = "^4"
scrapli = { git = "https://github.com/carlmontanari/scrapli.git", branch = "master", extras = ["asyncssh", "textfsm", "genie"] }
ntc-templates = "^1"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
bpython = "*"
pdbpp = "*"
flake8 = "*"
mypy = "*"
black = { version = "*", allow-prereleases = true }
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
