[tool.poetry]
name = "netwarden"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = "*"
httpx = "*"
dynaconf = "^3"
lxml = "^4"
ntc-templates = "^1"
attrs = "*"
scrapli = { version = "*", extras = ["asyncssh", "textfsm", "genie"], allow-prereleases = true }
scrapli-netconf = { version = "*", allow-prereleases = true }

[tool.poetry.dev-dependencies]
bpython = "*"
pdbpp = "*"
flake8 = "*"
mypy = "*"
black = { version = "*", allow-prereleases = true }
rope = "*"
pytest = "*"
scrapli-replay = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
